Update figures of all 2014 posts

--- a/content/posts/2014-05-25-.md
+++ b/content/posts/2014-05-25-.md
@@ -9,7 +9,7 @@ categories:
   - Uncategorized
 
 ---
-;;; init.el &mdash; Prelude&#8217;s configuration entry point. ;; ;; Copyright (c) 2011 Bozhidar Batsov ;; ;; Author: Bozhidar Batsov <bozhidar@batsov.com> ;; URL: <http://batsov.com/prelude> ;; Version: 1.0.0 ;; Keywords: convenience 
+;;; init.el — Prelude’s configuration entry point. ;; ;; Copyright (c) 2011 Bozhidar Batsov ;; ;; Author: Bozhidar Batsov <bozhidar@batsov.com> ;; URL: <http: batsov.com="" prelude=""> ;; Version: 1.0.0 ;; Keywords: convenience 
 
 ;; This file is not part of GNU Emacs. 
 
@@ -21,142 +21,143 @@ categories:
 
 ;; This program is free software; you can redistribute it and/or ;; modify it under the terms of the GNU General Public License ;; as published by the Free Software Foundation; either version 3 ;; of the License, or (at your option) any later version. ;; ;; This program is distributed in the hope that it will be useful, ;; but WITHOUT ANY WARRANTY; without even the implied warranty of ;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the ;; GNU General Public License for more details. ;; ;; You should have received a copy of the GNU General Public License ;; along with GNU Emacs; see the file COPYING. If not, write to the ;; Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, ;; Boston, MA 02110-1301, USA. 
 
-;;; Code: (defvar current-user (getenv (if (equal system-type &#8216;windows-nt) &#8220;USERNAME&#8221; &#8220;USER&#8221;))) 
+;;; Code: (defvar current-user (getenv (if (equal system-type ‘windows-nt) “USERNAME” “USER”))) 
 
-(message &#8220;Prelude is powering up&hellip; Be patient, Master %s!&#8221; current-user) 
+(message “Prelude is powering up… Be patient, Master %s!” current-user) 
 
-(when (version< emacs-version &#8220;24.1&#8221;) (error &#8220;Prelude requires at least GNU Emacs 24.1, but you&#8217;re running %s&#8221; emacs-version)) 
+(when (version&lt; emacs-version “24.1”) (error “Prelude requires at least GNU Emacs 24.1, but you’re running %s” emacs-version)) 
 
 ;; Always load newest byte code (setq load-prefer-newer t) 
 
-(defvar prelude-dir (file-name-directory load-file-name) &#8220;The root dir of the Emacs Prelude distribution.&#8221;) (defvar prelude-core-dir (expand-file-name &#8220;core&#8221; prelude-dir) &#8220;The home of Prelude&#8217;s core functionality.&#8221;) (defvar prelude-modules-dir (expand-file-name &#8220;modules&#8221; prelude-dir) &#8220;This directory houses all of the built-in Prelude modules.&#8221;) (defvar prelude-personal-dir (expand-file-name &#8220;personal&#8221; prelude-dir) &#8220;This directory is for your personal configuration. 
+(defvar prelude-dir (file-name-directory load-file-name) “The root dir of the Emacs Prelude distribution.”) (defvar prelude-core-dir (expand-file-name “core” prelude-dir) “The home of Prelude’s core functionality.”) (defvar prelude-modules-dir (expand-file-name “modules” prelude-dir) “This directory houses all of the built-in Prelude modules.”) (defvar prelude-personal-dir (expand-file-name “personal” prelude-dir) “This directory is for your personal configuration. 
 
-Users of Emacs Prelude are encouraged to keep their personal configuration changes in this directory. All Emacs Lisp files there are loaded automatically by Prelude.&#8221;) (defvar prelude-personal-preload-dir (expand-file-name &#8220;preload&#8221; prelude-personal-dir) &#8220;This directory is for your personal configuration, that you want loaded before Prelude.&#8221;) (defvar prelude-vendor-dir (expand-file-name &#8220;vendor&#8221; prelude-dir) &#8220;This directory houses packages that are not yet available in ELPA (or MELPA).&#8221;) (defvar prelude-savefile-dir (expand-file-name &#8220;savefile&#8221; prelude-dir) &#8220;This folder stores all the automatically generated save/history-files.&#8221;) (defvar prelude-modules-file (expand-file-name &#8220;prelude-modules.el&#8221; prelude-dir) &#8220;This files contains a list of modules that will be loaded by Prelude.&#8221;) 
+Users of Emacs Prelude are encouraged to keep their personal configuration changes in this directory. All Emacs Lisp files there are loaded automatically by Prelude.”) (defvar prelude-personal-preload-dir (expand-file-name “preload” prelude-personal-dir) “This directory is for your personal configuration, that you want loaded before Prelude.”) (defvar prelude-vendor-dir (expand-file-name “vendor” prelude-dir) “This directory houses packages that are not yet available in ELPA (or MELPA).”) (defvar prelude-savefile-dir (expand-file-name “savefile” prelude-dir) “This folder stores all the automatically generated save/history-files.”) (defvar prelude-modules-file (expand-file-name “prelude-modules.el” prelude-dir) “This files contains a list of modules that will be loaded by Prelude.”) 
 
 (unless (file-exists-p prelude-savefile-dir) (make-directory prelude-savefile-dir)) 
 
-(defun prelude-add-subfolders-to-load-path (parent-dir) &#8220;Add all level PARENT-DIR subdirs to the \`load-path&#8217;.&#8221; (dolist (f (directory-files parent-dir)) (let ((name (expand-file-name f parent-dir))) (when (and (file-directory-p name) (not (equal f &#8220;..&#8221;)) (not (equal f &#8220;.&#8221;))) (add-to-list &#8216;load-path name) (prelude-add-subfolders-to-load-path name))))) 
+(defun prelude-add-subfolders-to-load-path (parent-dir) “Add all level PARENT-DIR subdirs to the \`load-path’.” (dolist (f (directory-files parent-dir)) (let ((name (expand-file-name f parent-dir))) (when (and (file-directory-p name) (not (equal f “..”)) (not (equal f “.”))) (add-to-list ‘load-path name) (prelude-add-subfolders-to-load-path name))))) 
 
-;; add Prelude&#8217;s directories to Emacs&#8217;s \`load-path&#8217; (add-to-list &#8216;load-path prelude-core-dir) (add-to-list &#8216;load-path prelude-modules-dir) (add-to-list &#8216;load-path prelude-vendor-dir) (prelude-add-subfolders-to-load-path prelude-vendor-dir) 
+;; add Prelude’s directories to Emacs’s \`load-path’ (add-to-list ‘load-path prelude-core-dir) (add-to-list ‘load-path prelude-modules-dir) (add-to-list ‘load-path prelude-vendor-dir) (prelude-add-subfolders-to-load-path prelude-vendor-dir) 
 
 ;; reduce the frequency of garbage collection by making it happen on ;; each 50MB of allocated data (the default is on every 0.76MB) (setq gc-cons-threshold 50000000) 
 
-;; preload the personal settings from \`prelude-personal-preload-dir&#8217; (when (file-exists-p prelude-personal-preload-dir) (message &#8220;Loading personal configuration files in %s&hellip;&#8221; prelude-personal-preload-dir) (mapc &#8216;load (directory-files prelude-personal-preload-dir &#8216;t &#8220;<sup>[</sup>^#].*el$latex &#8220;))) 
+;; preload the personal settings from \`prelude-personal-preload-dir’ (when (file-exists-p prelude-personal-preload-dir) (message “Loading personal configuration files in %s…” prelude-personal-preload-dir) (mapc ‘load (directory-files prelude-personal-preload-dir ‘t “<sup>[</sup>^#].*el$latex “))) 
 
-(message &#8220;Loading Prelude&#8217;s core&hellip;&#8221;) 
+(message “Loading Prelude’s core…”) 
 
-;; the core stuff (require &#8216;prelude-packages) (require &#8216;prelude-ui) (require &#8216;prelude-core) (require &#8216;prelude-mode) (require &#8216;prelude-editor) (require &#8216;prelude-global-keybindings) 
+;; the core stuff (require ‘prelude-packages) (require ‘prelude-ui) (require ‘prelude-core) (require ‘prelude-mode) (require ‘prelude-editor) (require ‘prelude-global-keybindings) 
 
-;; OSX specific settings (when (eq system-type &#8216;darwin) (require &#8216;prelude-osx)) 
+;; OSX specific settings (when (eq system-type ‘darwin) (require ‘prelude-osx)) 
 
-(message &#8220;Loading Prelude&#8217;s modules&hellip;&#8221;) 
+(message “Loading Prelude’s modules…”) 
 
 ;; the modules (when (file-exists-p prelude-modules-file) (load prelude-modules-file)) 
 
-;; config changes made through the customize UI will be store here (setq custom-file (expand-file-name &#8220;custom.el&#8221; prelude-personal-dir)) 
+;; config changes made through the customize UI will be store here (setq custom-file (expand-file-name “custom.el” prelude-personal-dir)) 
 
-;; load the personal settings (this includes \`custom-file&#8217;) (when (file-exists-p prelude-personal-dir) (message &#8220;Loading personal configuration files in %s&hellip;&#8221; prelude-personal-dir) (mapc &#8216;load (directory-files prelude-personal-dir &#8216;t &#8220;<sup>[</sup>^#].*el$&#8221;))) 
+;; load the personal settings (this includes \`custom-file’) (when (file-exists-p prelude-personal-dir) (message “Loading personal configuration files in %s…” prelude-personal-dir) (mapc ‘load (directory-files prelude-personal-dir ‘t “<sup>[</sup>^#].*el$”))) 
 
-(message &#8220;Prelude is ready to do thy bidding, Master %s!&#8221; current-user) 
+(message “Prelude is ready to do thy bidding, Master %s!” current-user) 
 
-(prelude-eval-after-init ;; greet the use with some useful tip (run-at-time 5 nil &#8216;prelude-tip-of-the-day)) 
+(prelude-eval-after-init ;; greet the use with some useful tip (run-at-time 5 nil ‘prelude-tip-of-the-day)) 
 
 ;;; cpbotha starts here 
 
-;; <http://xahlee.blogspot.com/2010/09/elisp-read-file-content-in-one-shot.html> (defun get-string-from-file (filePath) &#8220;Return FILEPATH&#8217;s file content.&#8221; (with-temp-buffer (insert-file-contents filePath) (buffer-string))) 
+;; <http: 09="" 2010="" elisp-read-file-content-in-one-shot.html="" xahlee.blogspot.com=""> (defun get-string-from-file (filePath) “Return FILEPATH’s file content.” (with-temp-buffer (insert-file-contents filePath) (buffer-string))) 
 
-;; (setq load-path ;; (append &#8216;(&#8220;~/.emacs.d/polymode/&#8221; &#8220;~/.emacs.d/polymode/modes&#8221;) ;; load-path)) 
+;; (setq load-path ;; (append ‘(“~/.emacs.d/polymode/” “~/.emacs.d/polymode/modes”) ;; load-path)) 
 
-;; (require &#8216;poly-R) ;; (require &#8216;poly-markdown) 
+;; (require ‘poly-R) ;; (require ‘poly-markdown) 
 
-;; we don&#8217;t want whitespace-mode to cleanup on save ;; (prelude README.md) (setq prelude-clean-whitespace-on-save nil) ;; I also prefer the emacs movement shortcuts, but we need arrow keys ;; to work for CIDER slurping and burping! (setq prelude-guru nil) 
+;; we don’t want whitespace-mode to cleanup on save ;; (prelude README.md) (setq prelude-clean-whitespace-on-save nil) ;; I also prefer the emacs movement shortcuts, but we need arrow keys ;; to work for CIDER slurping and burping! (setq prelude-guru nil) 
 
-;; <https://github.com/purcell/mmm-mode> ;; save time during startup (require &#8216;mmm-auto) 
+;; <https: github.com="" mmm-mode="" purcell=""> ;; save time during startup (require ‘mmm-auto) 
 
-(mmm-add-classes &#8216;((markdown-python :submode python-mode :face mmm-declaration-submode-face :front &#8220;<sup>&#8220;`python[\n\r]</sup>+&#8221; :back &#8220;<sup>&#8220;`</sup>$latex &#8220;))) (mmm-add-classes &#8216;((markdown-javascript :submode javascript-mode :face mmm-declaration-submode-face :front &#8220;<sup>&#8220;`javascript[\n\r]</sup>+&#8221; :back &#8220;<sup>&#8220;`</sup>$&#8221;))) (mmm-add-classes &#8216;((markdown-emacs-lisp :submode emacs-lisp-mode :face mmm-declaration-submode-face :front &#8220;<sup>&#8220;`emacs</sup>-lisp[\n\r]+&#8221; :back &#8220;<sup>&#8220;`</sup>$&#8221;))) 
+(mmm-add-classes ‘((markdown-python :submode python-mode :face mmm-declaration-submode-face :front “<sup>“`python[\n\r]</sup>+” :back “<sup>“`</sup>$latex “))) (mmm-add-classes ‘((markdown-javascript :submode javascript-mode :face mmm-declaration-submode-face :front “<sup>“`javascript[\n\r]</sup>+” :back “<sup>“`</sup>$”))) (mmm-add-classes ‘((markdown-emacs-lisp :submode emacs-lisp-mode :face mmm-declaration-submode-face :front “<sup>“`emacs</sup>-lisp[\n\r]+” :back “<sup>“`</sup>$”))) 
 
-;; maybe == load when an appropriate file is opened (setq mmm-global-mode &#8216;maybe) (mmm-add-mode-ext-class &#8216;markdown-mode nil &#8216;markdown-python) (mmm-add-mode-ext-class &#8216;markdown-mode nil &#8216;markdown-javascript) (mmm-add-mode-ext-class &#8216;markdown-mode nil &#8216;markdown-emacs-lisp) 
+;; maybe == load when an appropriate file is opened (setq mmm-global-mode ‘maybe) (mmm-add-mode-ext-class ‘markdown-mode nil ‘markdown-python) (mmm-add-mode-ext-class ‘markdown-mode nil ‘markdown-javascript) (mmm-add-mode-ext-class ‘markdown-mode nil ‘markdown-emacs-lisp) 
 
 ;; mu4e configuration ========================================= 
 
-;; both of these decide from-address based on maildir ;; <https://github.com/wunki/wunki-dotfiles/blob/master/emacs/wunki-mu4e.el> ;; <http://varunbpatil.github.io/2013/08/19/eom/#.U3-2H3V53UY> ;; and here the mu4e author explains the whole process ;; <http://www.djcbsoftware.nl/code/mu/mu4e/Multiple-accounts.html> ;; and this is very cute, with hotkeys to switch accounts! ;; <https://github.com/skybert/my-little-friends/blob/master/emacs/.emacs.d/tkj-mu4e.el> ;; this does from address switching: ;; <http://pablo.rauzy.name/dev/init.el.html> 
+;; both of these decide from-address based on maildir ;; <https: blob="" emacs="" github.com="" master="" wunki="" wunki-dotfiles="" wunki-mu4e.el=""> ;; <http: #.u3-2h3v53uy="" 08="" 19="" 2013="" eom="" varunbpatil.github.io=""> ;; and here the mu4e author explains the whole process ;; <http: code="" mu="" mu4e="" multiple-accounts.html="" www.djcbsoftware.nl=""> ;; and this is very cute, with hotkeys to switch accounts! ;; <https: .emacs.d="" blob="" emacs="" github.com="" master="" my-little-friends="" skybert="" tkj-mu4e.el=""> ;; this does from address switching: ;; <http: dev="" init.el.html="" pablo.rauzy.name=""> 
 
-(add-to-list &#8216;load-path &#8220;/usr/local/share/emacs/site-lisp/mu4e&#8221;) 
+(add-to-list ‘load-path “/usr/local/share/emacs/site-lisp/mu4e”) 
 
-;; example configuration for mu4e (require &#8216;mu4e) 
+;; example configuration for mu4e (require ‘mu4e) 
 
-;; path to our Maildir directory (setq mu4e-maildir &#8220;/home/cpbotha/Maildir&#8221;) 
+;; path to our Maildir directory (setq mu4e-maildir “/home/cpbotha/Maildir”) 
 
-;; should mu4e use fancy utf characters? NO. they&#8217;re ugly. ;;(setq mu4e-use-fancy-chars &#8216;t) (setq mu4e-headers-date-format &#8220;%d/%b/%Y %H:%M&#8221;) 
+;; should mu4e use fancy utf characters? NO. they’re ugly. ;;(setq mu4e-use-fancy-chars ‘t) (setq mu4e-headers-date-format “%d/%b/%Y %H:%M”) 
 
-;; show full addresses in view message (instead of just names) ;; toggle per name with M-RET (setq mu4e-view-show-addresses &#8216;t) 
+;; show full addresses in view message (instead of just names) ;; toggle per name with M-RET (setq mu4e-view-show-addresses ‘t) 
 
-;; the next are relative to \`mu4e-maildir&#8217; ;; instead of strings, they can be functions too, see ;; their docstring or the chapter &#8216;Dynamic folders&#8217; (setq mu4e-sent-folder &#8220;/Archives.2014&#8221; mu4e-drafts-folder &#8220;/Drafts&#8221; mu4e-trash-folder &#8220;/Trash&#8221;) 
+;; the next are relative to \`mu4e-maildir’ ;; instead of strings, they can be functions too, see ;; their docstring or the chapter ‘Dynamic folders’ (setq mu4e-sent-folder “/Archives.2014” mu4e-drafts-folder “/Drafts” mu4e-trash-folder “/Trash”) 
 
-;; the maildirs you use frequently; access them with &#8216;j&#8217; (&#8216;jump&#8217;) (setq mu4e-maildir-shortcuts &#8216;((&#8220;/Archives.2014&#8221; . ?a) (&#8220;/INBOX&#8221; . ?i) (&#8220;/Inbox-WORK&#8221; . ?w) (&#8220;/Archives.2014&#8221; . ?s))) 
+;; the maildirs you use frequently; access them with ‘j’ (‘jump’) (setq mu4e-maildir-shortcuts ‘((“/Archives.2014” . ?a) (“/INBOX” . ?i) (“/Inbox-WORK” . ?w) (“/Archives.2014” . ?s))) 
 
-;; a list of user&#8217;s e-mail addresses ;;(setq mu4e-user-mail-address-list &#8216;(&#8220;info@charlbotha.com&#8221; &#8220;cpbotha@vxlabs.com&#8221;)) 
+;; a list of user’s e-mail addresses ;;(setq mu4e-user-mail-address-list ‘(“info@charlbotha.com” “cpbotha@vxlabs.com”)) 
 
-;; mu4e might complete this when I fill in my from address (setq mu4e-user-mail-address-list &#8216;(&#8220;info@charlbotha.com&#8221; &#8220;cpbotha@cpbotha.net&#8221; &#8220;cpbotha@vxlabs.com&#8221; &#8220;cpbotha@medvis.org&#8221; &#8220;charl@treparel.com&#8221; &#8220;charl.botha@treparel.com&#8221;)) 
+;; mu4e might complete this when I fill in my from address (setq mu4e-user-mail-address-list ‘(“info@charlbotha.com” “cpbotha@cpbotha.net” “cpbotha@vxlabs.com” “cpbotha@medvis.org” “charl@treparel.com” “charl.botha@treparel.com”)) 
 
-;; when you want to use some external command for text->html ;; conversion, e.g. the &#8216;html2text&#8217; program ;; (cpbotha: html2text sees to work better than the built-in one) (setq mu4e-html2text-command &#8220;html2text&#8221;) 
+;; when you want to use some external command for text-&gt;html ;; conversion, e.g. the ‘html2text’ program ;; (cpbotha: html2text sees to work better than the built-in one) (setq mu4e-html2text-command “html2text”) 
 
-;; the headers to show in the headers list &ndash; a pair of a field ;; and its width, with \`nil&#8217; meaning &#8216;unlimited&#8217; ;; (better only use that for the last field. ;; These are the defaults: (setq mu4e-headers-fields &#8216;( (:date . 25) (:flags . 6) (:from . 22) (:subject . nil))) 
+;; the headers to show in the headers list – a pair of a field ;; and its width, with \`nil’ meaning ‘unlimited’ ;; (better only use that for the last field. ;; These are the defaults: (setq mu4e-headers-fields ‘( (:date . 25) (:flags . 6) (:from . 22) (:subject . nil))) 
 
-;; program to get mail; alternatives are &#8216;fetchmail&#8217;, &#8216;getmail&#8217; ;; isync or your own shellscript. called when &#8216;U&#8217; is pressed in ;; main view. 
+;; program to get mail; alternatives are ‘fetchmail’, ‘getmail’ ;; isync or your own shellscript. called when ‘U’ is pressed in ;; main view. 
 
-;; If you get your mail without an explicit command, ;; use &#8220;true&#8221; for the command (this is the default) (setq mu4e-get-mail-command &#8220;offlineimap&#8221;) 
+;; If you get your mail without an explicit command, ;; use “true” for the command (this is the default) (setq mu4e-get-mail-command “offlineimap”) 
 
-;; general emacs mail settings; used when composing e-mail ;; the non-mu4e-* stuff is inherited from emacs/message-mode (setq user-mail-address &#8220;info@charlbotha.com&#8221; user-full-name &#8220;Charl P. Botha&#8221;) 
+;; general emacs mail settings; used when composing e-mail ;; the non-mu4e-* stuff is inherited from emacs/message-mode (setq user-mail-address “info@charlbotha.com” user-full-name “Charl P. Botha”) 
 
-;; set this to nil so signature is not included by default (setq mu4e-compose-signature-auto-include &#8216;t) ;; you can include in message with C-c C-w (setq mu4e-compose-signature (with-temp-buffer (insert-file-contents &#8220;~/.signature.personal&#8221;) (buffer-string))) ;; message-signature-file not used by mu4e (setq message-signature-file &#8220;~/.signature.personal&#8221;) 
+;; set this to nil so signature is not included by default (setq mu4e-compose-signature-auto-include ‘t) ;; you can include in message with C-c C-w (setq mu4e-compose-signature (with-temp-buffer (insert-file-contents “~/.signature.personal”) (buffer-string))) ;; message-signature-file not used by mu4e (setq message-signature-file “~/.signature.personal”) 
 
-(defun cpb-mu4e-personal() (interactive) (message &#8220;personal mail account&#8221;) (setq user-mail-address &#8220;info@charlbotha.com&#8221; mu4e-compose-signature (get-string-from-file &#8220;~/.signature.personal&#8221;)) ) 
+(defun cpb-mu4e-personal() (interactive) (message “personal mail account”) (setq user-mail-address “info@charlbotha.com” mu4e-compose-signature (get-string-from-file “~/.signature.personal”)) ) 
 
-(defun cpb-mu4e-vxlabs() (interactive) (message &#8220;vxlabs mail account&#8221;) (setq user-mail-address &#8220;cpbotha@vxlabs.com&#8221; mu4e-compose-signature (get-string-from-file &#8220;~/.signature.vxlabs&#8221;)) ) 
+(defun cpb-mu4e-vxlabs() (interactive) (message “vxlabs mail account”) (setq user-mail-address “cpbotha@vxlabs.com” mu4e-compose-signature (get-string-from-file “~/.signature.vxlabs”)) ) 
 
-(defun cpb-mu4e-trep() (interactive) (message &#8220;treparel mail account&#8221;) (setq user-mail-address &#8220;charl.botha@treparel.com&#8221; mu4e-compose-signature (get-string-from-file &#8220;~/.signature.treparel&#8221;)) ) 
+(defun cpb-mu4e-trep() (interactive) (message “treparel mail account”) (setq user-mail-address “charl.botha@treparel.com” mu4e-compose-signature (get-string-from-file “~/.signature.treparel”)) ) 
 
-(defun cpb-mu4e-medvis() (interactive) (message &#8220;medvis mail account&#8221;) (setq user-mail-address &#8220;cpbotha@medvis.org&#8221; mu4e-compose-signature (get-string-from-file &#8220;~/.signature.medvis&#8221;)) ) 
+(defun cpb-mu4e-medvis() (interactive) (message “medvis mail account”) (setq user-mail-address “cpbotha@medvis.org” mu4e-compose-signature (get-string-from-file “~/.signature.medvis”)) ) 
 
-;; quickly change account (define-key mu4e-main-mode-map (kbd &#8220;<f1>&#8221;) &#8216;cpb-mu4e-personal) (define-key mu4e-main-mode-map (kbd &#8220;<f2>&#8221;) &#8216;cpb-mu4e-vxlabs) (define-key mu4e-main-mode-map (kbd &#8220;<f4>&#8221;) &#8216;cpb-mu4e-trep) (define-key mu4e-main-mode-map (kbd &#8220;<f6>&#8221;) &#8216;cpb-mu4e-medvis) (define-key mu4e-headers-mode-map (kbd &#8220;<f1>&#8221;) &#8216;cpb-mu4e-personal) (define-key mu4e-headers-mode-map (kbd &#8220;<f2>&#8221;) &#8216;cpb-mu4e-vxlabs) (define-key mu4e-headers-mode-map (kbd &#8220;<f4>&#8221;) &#8216;cpb-mu4e-trep) (define-key mu4e-headers-mode-map (kbd &#8220;<f6>&#8221;) &#8216;cpb-mu4e-medvis) 
+;; quickly change account (define-key mu4e-main-mode-map (kbd “<f1>”) ‘cpb-mu4e-personal) (define-key mu4e-main-mode-map (kbd “<f2>”) ‘cpb-mu4e-vxlabs) (define-key mu4e-main-mode-map (kbd “<f4>”) ‘cpb-mu4e-trep) (define-key mu4e-main-mode-map (kbd “<f6>”) ‘cpb-mu4e-medvis) (define-key mu4e-headers-mode-map (kbd “<f1>”) ‘cpb-mu4e-personal) (define-key mu4e-headers-mode-map (kbd “<f2>”) ‘cpb-mu4e-vxlabs) (define-key mu4e-headers-mode-map (kbd “<f4>”) ‘cpb-mu4e-trep) (define-key mu4e-headers-mode-map (kbd “<f6>”) ‘cpb-mu4e-medvis) 
 
-;; for sendmail read this <http://www.gnus.org/manual/message_36.html> ;; am using nullmailer, so my mail sending just became STUPID fast (setq message-send-mail-function &#8216;message-send-mail-with-sendmail) 
+;; for sendmail read this <http: manual="" message_36.html="" www.gnus.org=""> ;; am using nullmailer, so my mail sending just became STUPID fast (setq message-send-mail-function ‘message-send-mail-with-sendmail) 
 
-;; smtp mail setting ;; (setq ;; message-send-mail-function &#8216;smtpmail-send-it ;; smtpmail-stream-type &#8216;starttls ;; smtpmail-default-smtp-server &#8220;za1.vxlabs.com&#8221; ;; smtpmail-smtp-server &#8220;za1.vxlabs.com&#8221; ;; smtpmail-smtp-service 587 
+;; smtp mail setting ;; (setq ;; message-send-mail-function ‘smtpmail-send-it ;; smtpmail-stream-type ‘starttls ;; smtpmail-default-smtp-server “za1.vxlabs.com” ;; smtpmail-smtp-server “za1.vxlabs.com” ;; smtpmail-smtp-service 587 
 
-;; ;; if you need offline mode, set these &ndash; and create the queue dir ;; ;; with &#8216;mu mkdir&#8217;, i.e.. mu mkdir /home/user/Maildir/queue ;; smtpmail-queue-mail nil ;; smtpmail-queue-dir &#8220;/home/user/Maildir/queue/cur&#8221;) 
+;; ;; if you need offline mode, set these – and create the queue dir ;; ;; with ‘mu mkdir’, i.e.. mu mkdir /home/user/Maildir/queue ;; smtpmail-queue-mail nil ;; smtpmail-queue-dir “/home/user/Maildir/queue/cur”) 
 
-;; don&#8217;t keep message buffers around (setq message-kill-buffer-on-exit t) ;; attachments go here (setq mu4e-attachment-dir &#8220;~/Downloads&#8221;) 
+;; don’t keep message buffers around (setq message-kill-buffer-on-exit t) ;; attachments go here (setq mu4e-attachment-dir “~/Downloads”) 
 
-;; argh, this snippet doesn&#8217;t work anymore, and it uses mu4e~* internal funcs ;; which it should not&hellip; ;; found this here: <https://groups.google.com/forum/#!topic/mu-discuss/OacoHGIsGWc> ;; from address will be same as first address found in to, cc or from that matches ;; mu4e-user-mail-address-regexp &ndash; (in message mode this is message-alternative-emails) 
+;; argh, this snippet doesn’t work anymore, and it uses mu4e~* internal funcs ;; which it should not… ;; found this here: <https: #!topic="" forum="" groups.google.com="" mu-discuss="" oacohgisgwc=""> ;; from address will be same as first address found in to, cc or from that matches ;; mu4e-user-mail-address-regexp – (in message mode this is message-alternative-emails) 
 
-;; <http://www.gnu.org/software/emacs/manual/html_node/message/Message-Headers.html> ;; but here we use the alternative variable mu4e-user-mail-address-regexp ;; we reuse the already set list of user mail addresses (setq mu4e-user-mail-address-regexp (regexp-opt mu4e-user-mail-address-list)) 
+;; <http: emacs="" html_node="" manual="" message="" message-headers.html="" software="" www.gnu.org=""> ;; but here we use the alternative variable mu4e-user-mail-address-regexp ;; we reuse the already set list of user mail addresses (setq mu4e-user-mail-address-regexp (regexp-opt mu4e-user-mail-address-list)) 
 
-;; taken from <http://pablo.rauzy.name/dev/init.el.html> ;; would have preferred code to find any one of my addresses in to/cc, then ;; use that to lookup in alist a la ;; <http://www.djcbsoftware.nl/code/mu/mu4e/Multiple-accounts.html> (add-hook &#8216;mu4e-compose-pre-hook (defun my-set-from-address () &#8220;Set the From address based on the To address of the original.&#8221; (let ((msg mu4e-compose-parent-message)) ;; msg is shorter&hellip; (if msg (cond ((mu4e-message-contact-field-matches msg :to &#8220;cpbotha@cpbotha.net&#8221;) (cpb-mu4e-personal)) ((mu4e-message-contact-field-matches msg :to &#8220;cpbotha@vxlabs.com&#8221;) (cpb-mu4e-vxlabs)) ((mu4e-message-contact-field-matches msg :to (list &#8220;charl.botha@treparel.com&#8221; &#8220;charl@treparel.com&#8221;)) (cpb-mu4e-trep)) ((mu4e-message-contact-field-matches msg :to &#8220;cpbotha@medvis.org&#8221;) (cpb-mu4e-medvis)) (t (cpb-mu4e-personal))))))) 
+;; taken from <http: dev="" init.el.html="" pablo.rauzy.name=""> ;; would have preferred code to find any one of my addresses in to/cc, then ;; use that to lookup in alist a la ;; <http: code="" mu="" mu4e="" multiple-accounts.html="" www.djcbsoftware.nl=""> (add-hook ‘mu4e-compose-pre-hook (defun my-set-from-address () “Set the From address based on the To address of the original.” (let ((msg mu4e-compose-parent-message)) ;; msg is shorter… (if msg (cond ((mu4e-message-contact-field-matches msg :to “cpbotha@cpbotha.net”) (cpb-mu4e-personal)) ((mu4e-message-contact-field-matches msg :to “cpbotha@vxlabs.com”) (cpb-mu4e-vxlabs)) ((mu4e-message-contact-field-matches msg :to (list “charl.botha@treparel.com” “charl@treparel.com”)) (cpb-mu4e-trep)) ((mu4e-message-contact-field-matches msg :to “cpbotha@medvis.org”) (cpb-mu4e-medvis)) (t (cpb-mu4e-personal))))))) 
 
 ;; mu4e config end ============================================ 
 
-(setq org-directory &#8220;~/sync/notes/org/&#8221;) 
+(setq org-directory “~/sync/notes/org/”) 
 
-(require &#8216;org2blog-autoloads) (require &#8216;netrc) 
+(require ‘org2blog-autoloads) (require ‘netrc) 
 
-(setq wp-cpbotha (netrc-machine (netrc-parse &#8220;~/.netrc&#8221;) &#8220;wp-cpbotha&#8221; t)) (setq wp-vxlabs (netrc-machine (netrc-parse &#8220;~/.netrc&#8221;) &#8220;wp-vxlabs&#8221; t)) 
+(setq wp-cpbotha (netrc-machine (netrc-parse “~/.netrc”) “wp-cpbotha” t)) (setq wp-vxlabs (netrc-machine (netrc-parse “~/.netrc”) “wp-vxlabs” t)) 
 
-(setq org2blog/wp-blog-alist &#8216;((&#8220;cpbotha&#8221; :url &#8220;<http://cpbotha.net/xmlrpc.php>&#8221; :username (netrc-get wp-cpbotha &#8220;login&#8221;) :password (netrc-get wp-cpbotha &#8220;password&#8221;) :default-title &#8220;Hello World&#8221; :default-categories (&#8220;org2blog&#8221; &#8220;emacs&#8221;) :tags-as-categories nil) (&#8220;vxlabs&#8221; :url &#8220;<http://vxlabs.com/xmlrpc.php>&#8221; :username &#8220;cpbotha&#8221;))) 
+(setq org2blog/wp-blog-alist ‘((“cpbotha” :url “<http: cpbotha.net="" xmlrpc.php="">” :username (netrc-get wp-cpbotha “login”) :password (netrc-get wp-cpbotha “password”) :default-title “Hello World” :default-categories (“org2blog” “emacs”) :tags-as-categories nil) (“vxlabs” :url “<http: vxlabs.com="" xmlrpc.php="">” :username “cpbotha”))) 
 
-;; <http://blog.binchen.org/posts/how-to-use-org2blog-effectively-as-a-programmer.html> ;; has half the instructions. 
+;; <http: blog.binchen.org="" how-to-use-org2blog-effectively-as-a-programmer.html="" posts=""> ;; has half the instructions. 
 
-;; \`M-x package-install RET htmlize\` is required, else you get empty code blocks ;; see <https://github.com/punchagan/org2blog/blob/master/org2blog.el> ;; without this, org2blog won&#8217;t use the syntaxhighlighter source code (setq org2blog/wp-use-sourcecode-shortcode &#8216;t) ;; remove light=&#8221;true&#8221; (setq org2blog/wp-sourcecode-default-params nil) ;; target language needs to be in here (setq org2blog/wp-sourcecode-langs &#8216;(&#8220;actionscript3&#8221; &#8220;bash&#8221; &#8220;coldfusion&#8221; &#8220;cpp&#8221; &#8220;csharp&#8221; &#8220;css&#8221; &#8220;delphi&#8221; &#8220;erlang&#8221; &#8220;fsharp&#8221; &#8220;diff&#8221; &#8220;groovy&#8221; &#8220;javascript&#8221; &#8220;java&#8221; &#8220;javafx&#8221; &#8220;matlab&#8221; &#8220;objc&#8221; &#8220;perl&#8221; &#8220;php&#8221; &#8220;text&#8221; &#8220;powershell&#8221; &#8220;python&#8221; &#8220;ruby&#8221; &#8220;scala&#8221; &#8220;sql&#8221; &#8220;vb&#8221; &#8220;xml&#8221; &#8220;sh&#8221; &#8220;emacs-lisp&#8221; &#8220;lisp&#8221; &#8220;lua&#8221;)) 
+;; \`M-x package-install RET htmlize\` is required, else you get empty code blocks ;; see <https: blob="" github.com="" master="" org2blog="" org2blog.el="" punchagan=""> ;; without this, org2blog won’t use the syntaxhighlighter source code (setq org2blog/wp-use-sourcecode-shortcode ‘t) ;; remove light=”true” (setq org2blog/wp-sourcecode-default-params nil) ;; target language needs to be in here (setq org2blog/wp-sourcecode-langs ‘(“actionscript3” “bash” “coldfusion” “cpp” “csharp” “css” “delphi” “erlang” “fsharp” “diff” “groovy” “javascript” “java” “javafx” “matlab” “objc” “perl” “php” “text” “powershell” “python” “ruby” “scala” “sql” “vb” “xml” “sh” “emacs-lisp” “lisp” “lua”)) 
 
-;; hopefully this will syntax highlight within #+BEGIN<sub>SRC</sub> &hellip; #+END<sub>SRC</sub> blocks (setq org-src-fontify-natively t) 
+;; hopefully this will syntax highlight within #+BEGIN<sub>SRC</sub> … #+END<sub>SRC</sub> blocks (setq org-src-fontify-natively t) 
 
-(require &#8216;deft) (setq deft-extension &#8220;md&#8221;) (setq deft-text-mode &#8216;markdown-mode) (setq deft-directory &#8220;~/sync/notes/pkb4000/&#8221;) (setq deft-use-filename-as-title t) 
+(require ‘deft) (setq deft-extension “md”) (setq deft-text-mode ‘markdown-mode) (setq deft-directory “~/sync/notes/pkb4000/”) (setq deft-use-filename-as-title t) 
 
 ;; deft end =================================================== 
 
-(setq rcirc-default-nick &#8220;evilburp&#8221;) (setq rcirc-default-user-name &#8220;evilburp&#8221;) (setq rcirc-server-alist &#8216;((&#8220;irc.freenode.net&#8221; :channels (&#8220;#clojure&#8221;)) (&#8220;openirc.snt.utwente.nl&#8221;) )) 
+(setq rcirc-default-nick “evilburp”) (setq rcirc-default-user-name “evilburp”) (setq rcirc-server-alist ‘((“irc.freenode.net” :channels (“#clojure”)) (“openirc.snt.utwente.nl”) )) 
 
 (setq prelude-flyspell nil) 
 
 ;;; init.el ends here
+</https:></http:></http:></http:></http:></http:></http:></https:></http:></f6></f4></f2></f1></f6></f4></f2></f1></http:></https:></http:></http:></https:></https:></http:></http:></bozhidar@batsov.com>
