--- a/content/posts/2014-06-16-.md
+++ b/content/posts/2014-06-16-.md
@@ -18,46 +18,44 @@ tags:
   - security
 
 ---
-In 2013, the secure email service Lavabit voluntarily shutdown when they were pressured by the US government to leak user data. They were prohibited by law to speak up about the details of the events surrounding this incident. I&#8217;m not sure how long the chilling farewell message will remain on the [Lavabit website][1], or how long the website will remain available, so I&#8217;m posting it here as well, first in text form, then a screenshot of the site on 2013-09-15:
+In 2013, the secure email service Lavabit voluntarily shutdown when they were pressured by the US government to leak user data. They were prohibited by law to speak up about the details of the events surrounding this incident. I’m not sure how long the chilling farewell message will remain on the [Lavabit website][1], or how long the website will remain available, so I’m posting it here as well, first in text form, then a screenshot of the site on 2013-09-15:
 
 > <div>
->   <p>
->     TESTING REVISIONS!
->   </p>
->   
->   <p>
->     My Fellow Users,
->   </p>
->   
->   <p>
->     I have been forced to make a difficult decision: to become complicit in crimes against the American people or walk away from nearly ten years of hard work by shutting down Lavabit. After significant soul searching, I have decided to suspend operations. I wish that I could legally share with you the events that led to my decision. I cannot. I feel you deserve to know what’s going on&#8211;the first amendment is supposed to guarantee me the freedom to speak out in situations like this. Unfortunately, Congress has passed laws that say otherwise. As things currently stand, I cannot share my experiences over the last six weeks, even though I have twice made the appropriate requests.
->   </p>
->   
->   <p>
->     What’s going to happen now? We’ve already started preparing the paperwork needed to continue to fight for the Constitution in the Fourth Circuit Court of Appeals. A favorable decision would allow me resurrect Lavabit as an American company.
->   </p>
->   
->   <p>
->     This experience has taught me one very important lesson: without congressional action or a strong judicial precedent, I would _strongly_ recommend against anyone trusting their private data to a company with physical ties to the United States.
->   </p>
->   
->   <p>
->     Sincerely,<br /> Ladar Levison<br /> Owner and Operator, Lavabit LLC
->   </p>
->   
->   <p>
->     Defending the constitution is expensive! Help us by donating to the Lavabit Legal Defense Fund <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7BCR4A5W9PNN4">here</a>.
->   </p>
-> </div>
-
+&gt;   <p>
+&gt;     TESTING REVISIONS!
+&gt;   </p>
+&gt;   
+&gt;   <p>
+&gt;     My Fellow Users,
+&gt;   </p>
+&gt;   
+&gt;   <p>
+&gt;     I have been forced to make a difficult decision: to become complicit in crimes against the American people or walk away from nearly ten years of hard work by shutting down Lavabit. After significant soul searching, I have decided to suspend operations. I wish that I could legally share with you the events that led to my decision. I cannot. I feel you deserve to know what’s going on–the first amendment is supposed to guarantee me the freedom to speak out in situations like this. Unfortunately, Congress has passed laws that say otherwise. As things currently stand, I cannot share my experiences over the last six weeks, even though I have twice made the appropriate requests.
+&gt;   </p>
+&gt;   
+&gt;   <p>
+&gt;     What’s going to happen now? We’ve already started preparing the paperwork needed to continue to fight for the Constitution in the Fourth Circuit Court of Appeals. A favorable decision would allow me resurrect Lavabit as an American company.
+&gt;   </p>
+&gt;   
+&gt;   <p>
+&gt;     This experience has taught me one very important lesson: without congressional action or a strong judicial precedent, I would _strongly_ recommend against anyone trusting their private data to a company with physical ties to the United States.
+&gt;   </p>
+&gt;   
+&gt;   <p>
+&gt;     Sincerely,<br/> Ladar Levison<br/> Owner and Operator, Lavabit LLC
+&gt;   </p>
+&gt;   
+&gt;   <p>
+&gt;     Defending the constitution is expensive! Help us by donating to the Lavabit Legal Defense Fund <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=7BCR4A5W9PNN4">here</a>.
+&gt;   </p>
+&gt; </div>
 <div>
-  <p>
-    &#8230; and here is the promised screenshot of the website (click for full resolution):
+<p>
+    … and here is the promised screenshot of the website (click for full resolution):
   </p>
 </div>
-
 <div>
-  <figure id="attachment_1782" aria-describedby="caption-attachment-1782" style="width: 300px" class="wp-caption aligncenter"><a href="http://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title=""><img data-attachment-id="1782" data-permalink="https://cpbotha.net/?attachment_id=1782" data-orig-file="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png" data-orig-size="928,731" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;}" data-image-title="lavabit_farewell" data-image-description="" data-medium-file="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-300x236.png" data-large-file="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png" class="size-medium wp-image-1782" src="http://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-300x236.png" alt="Screenshot of farewell message on Lavabit website" width="300" height="236" srcset="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-300x236.png 300w, https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-535x421.png 535w, https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png 928w" sizes="(max-width: 300px) 85vw, 300px" /></a><figcaption id="caption-attachment-1782" class="wp-caption-text">Screenshot of farewell message on Lavabit website</figcaption></figure>
+<figure aria-describedby="caption-attachment-1782" class="wp-caption aligncenter" id="attachment_1782" style="width: 300px"><a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png" title=""><img alt="Screenshot of farewell message on Lavabit website" class="size-medium wp-image-1782" data-attachment-id="1782" data-comments-opened="1" data-image-description="" data-image-meta='{"aperture":"0","credit":"","camera":"","caption":"","created_timestamp":"0","copyright":"","focal_length":"0","iso":"0","shutter_speed":"0","title":""}' data-image-title="lavabit_farewell" data-large-file="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png" data-medium-file="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-300x236.png" data-orig-file="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png" data-orig-size="928,731" data-permalink="https://cpbotha.net/?attachment_id=1782" height="236" sizes="(max-width: 300px) 85vw, 300px" src="http://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-300x236.png" srcset="https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-300x236.png 300w, https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell-535x421.png 535w, https://cpbotha.net/wp-content/uploads/2013/09/lavabit_farewell.png 928w" width="300"/></a><figcaption class="wp-caption-text" id="caption-attachment-1782">Screenshot of farewell message on Lavabit website</figcaption></figure>
 </div>
 
  [1]: http://lavabit.com/ "Lavabit website"
